--- a/Modules/TPC/CMakeLists.txt
+++ b/Modules/TPC/CMakeLists.txt
@@ -11,7 +11,9 @@ target_sources(O2QcTPC PRIVATE src/PID.cxx
                              src/Clusters.cxx
                              src/CalDetPublisher.cxx
                              src/Utility.cxx
-                             src/RawDigits.cxx)
+                             src/RawDigits.cxx
+                             src/TrendingCheck.cxx
+                             src/cluster2DCheck.cxx)
 
 target_include_directories(
   O2QcTPC
@@ -38,6 +40,8 @@ add_root_dictionary(O2QcTPC
                             include/TPC/CalDetPublisher.h
                             include/TPC/Utility.h
                             include/TPC/RawDigits.h
+                            include/TPC/TrendingCheck.h
+                            include/TPC/cluster2DCheck.h
                     LINKDEF include/TPC/LinkDef.h
                     BASENAME O2QcTPC)
 
@@ -96,5 +100,7 @@ install(FILES run/tpcQCPID_sampled.json
               run/tpcQCTrackingFromExternal_direct.json
               run/tpcQCCalDetPublisher.json
               run/tpcQCRawDigits_direct.json
+              run/tpcQCCheckerOfTrends.json
               run/tpcQCTasks_multinode.json
+              run/tpcQCcluster2DCheck.json
         DESTINATION etc)
