--- a/Modules/TPC/run/tpcQCTasks_multinode.json
+++ b/Modules/TPC/run/tpcQCTasks_multinode.json
@@ -34,11 +34,7 @@
           "type": "dataSamplingPolicy",
           "name": "random-rawdata"
         },
-        "taskParameters": {
-          "NRawDigitsNBins": "100",  "NRawDigitsXMin": "0", "NRawDigitsXMax": "100",
-          "QmaxNBins":       "200",  "QmaxXMin":       "0", "QmaxXMax":       "200",
-          "TimeBinNBins":    "600",  "TimeBinXMin":    "0", "TimeBinXMax":    "600"
-        },
+        "taskParameters": {},
         "location": "remote"
       },
       "Clusters_EPN": {
@@ -53,12 +49,7 @@
           "name": "random-clusters"
         },
         "taskParameters": {
-          "NClustersNBins": "100",  "NClustersXMin": "0", "NClustersXMax": "100",
-          "QmaxNBins":      "200",  "QmaxXMin":      "0", "QmaxXMax":      "200",
-          "QtotNBins":      "600",  "QtotXMin":      "0", "QtotXMax":      "600",
-          "SigmaPadNBins":  "200",  "SigmaPadXMin":  "0", "SigmaPadXMax":  "2",
-          "SigmaTimeNBins": "200",  "SigmaTimeXMin": "0", "SigmaTimeXMax": "2",
-          "TimeBinNBins":   "1000", "TimeBinXMin":   "0", "TimeBinXMax":   "100000"
+          "myOwnKey": "myOwnValue"
         },
         "location": "remote"
       },
